...
            SafeCityTheme {
                Surface(
                    modifier = Modifier.fillMaxSize(),
                    color = MaterialTheme.colors.background
                ) {
                    Column {
                        TopBar("Регистрация", true, onBackPressed = { onBackPressed() })
                        RegistrationScreen(onBackPressed = { onBackPressed() })
                    }
                }
            }
        }
    }
...
        val selectedGender = remember { mutableStateOf(Gender.Мужской) }

        EmailInput(email = email)
        PasswordInput(password = password)
        PasswordConfirm(password = passwordConfirm)

        AnyInput(label = "Фамилия", placeholder = "Введите фамилию", surname)
        AnyInput(label = "Имя", placeholder = "Введите имя", name)
        DateInput(selectedDate = birthday, "Дата рождения")
        GenderDropdown(
            selectedGender = selectedGender.value,
            onGenderSelected = { gender ->
                selectedGender.value = gender
            }
...
    var passwordVisible by remember { mutableStateOf(false) }
    val focusManager = LocalFocusManager.current

    OutlinedTextField(
        value = password.value,
        onValueChange = { password.value = it },
        label = { Text("Подтверждение пароля") },
        placeholder = { Text(text = "Повторите пароль") },
        modifier = Modifier
            .padding(16.dp)
            .fillMaxWidth()
            .height(75.dp),
        keyboardOptions = KeyboardOptions(
...
        },
        modifier = Modifier
            .padding(8.dp)
            .fillMaxWidth()
            .height(50.dp)
    ) {
        Text("Зарегистрироваться")
    }
}

