...
            SafeCityTheme {
                Surface(
                    modifier = Modifier.fillMaxSize(),
                    color = MaterialTheme.colors.background
                ) {
                    Column {
                        TopBar("Добавление опасности", true, onBackPressed = { onBackPressed() })
                        AddingDangerScreen(onBackPressed = { onBackPressed() })
                    }
                }
            }
        }
    }
...
    val textFieldColors = TextFieldDefaults.textFieldColors(
        backgroundColor = Color.White
    )
    OutlinedTextField(
        value = text.value,
        onValueChange = { text.value = it },
        label = { Text(text = "Комментарий") },
        placeholder = { Text(text = "Введите комментарий") },
        modifier = Modifier
            .fillMaxWidth()
            .heightIn(max = 100.dp)
            .padding(8.dp)
            .border(width = 1.dp, color = Color.Black, shape = RoundedCornerShape(8.dp)),
...
        },
        modifier = Modifier
            .padding(8.dp)
            .fillMaxWidth()
            .height(50.dp)
    ) {
        Text("Добавить")
    }
}
